[build-system]
    requires = [
        'setuptools',
        'setuptools_scm',
        'setuptools_scm_git_archive',
        'wheel',
    ]
    build-backend = 'setuptools.build_meta'

[project]
    name = 'sans'
    description = 'Synchronous / Asynchronous HTTPX extension for NationStates'
    readme = 'README.rst'
    requires-python = '>=3.7.0,<4.0'
    classifiers = [
        'Development Status :: 3 - Alpha',
        'Framework :: AsyncIO',
        'License :: OSI Approved :: MIT License',
        'Intended Audience :: Developers',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3 :: Only',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Internet',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: Utilities',
        'Typing :: Typed'
    ]
    dependencies = [
        'httpx ~= 0.21.1',
        'importlib_metadata >= 1.4.0; python_version < "3.8"'
    ]
    dynamic = ['version']

[project.license]
file = 'LICENSE'

[[project.authors]]
name = 'Zephyrkul'

[project.urls]
homepage = 'https://github.com/Zephyrkul/sans'
documentation = 'https://sans.readthedocs.io/en/stable/'
repository = 'https://github.com/Zephyrkul/sans.git'

[project.scripts]
sans = 'sans.__main__:main'

[project.optional-dependencies]
docs = [
    'Sphinx ~= 5.3.0'
]
lxml = [
    'lxml ~= 4.9.2',
    'lxml-stubs ~= 0.4.0'
]
json = [
    'xmltodict ~= 0.13.0'
]

[tool.setuptools_scm]

[tool.isort]
    profile = 'black'
    combine_as_imports = true
    extra_standard_library = ['typing_extensions']
    treat_comments_as_code = ['# type: ignore']

[tool.black]
    target-version = ['py37']
    include = '\.pyi?$'

[tool.pyright]
    pythonVersion = '3.7'
    reportUnnecessaryTypeIgnoreComment = 'warning'
    #   typeCheckingMode = 'strict'

[tool.ruff]
    target-version = 'py37'
    select = ['E', 'F', 'B', 'Q']
    ignore = ['E501']

[tool.ruff.per-file-ignores]
    "**/__init__.py" = ['F403']
    "**/*.pyi" = ['F403', 'F405']
