[build-system]
    requires = [
        'setuptools',
        'setuptools_scm',
        'setuptools_scm_git_archive',
        'wheel',
    ]
    build-backend = 'setuptools.build_meta'

[project]
    name = 'sans'
    description = 'Synchronous / Asynchronous HTTPX extension for NationStates'
    readme = 'README.md'
    requires-python = '>=3.7.0,<4.0'
    classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Framework :: AsyncIO',
        'Framework :: AnyIO',
        'License :: OSI Approved :: MIT License',
        'Intended Audience :: Developers',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3 :: Only',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Internet',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Topic :: Utilities',
        'Typing :: Typed',
    ]
    dependencies = [
        'httpx ~= 0.23',
        'importlib_metadata >= 1.4.0; python_version < "3.8"',
    ]
    dynamic = ['version']

[project.license]
    file = 'LICENSE'

[[project.authors]]
    name = 'Zephyrkul'

[project.urls]
    homepage = 'https://github.com/Zephyrkul/sans'
    documentation = 'https://sans.readthedocs.io/en/stable/'
    repository = 'https://github.com/Zephyrkul/sans.git'

[project.scripts]
    sans = 'sans.__main__:main'

[project.optional-dependencies]
    docs = ['Sphinx ~= 5.3']
    lxml = ['lxml ~= 4.9']
    json = ['xmltodict ~= 0.13']

[tool.setuptools_scm]

[tool.pyright]
    pythonVersion = '3.7'
    reportUnnecessaryTypeIgnoreComment = 'warning'
    #   typeCheckingMode = 'strict'

[tool.ruff]
    target-version = 'py37'

[tool.ruff.lint]
    select = ['E', 'F', 'B', 'Q', 'I', 'W']
    ignore = [
        # ignore rules incompatible with ruff-format: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
        'E501', 'W191', 'E111', 'E114', 'E117', 'D206', 'D300', 'Q000', 'Q001', 'Q002', 'Q003', 'COM812', 'COM819', 'ISC001', 'ISC002'
    ]

[tool.ruff.lint.isort]
    combine-as-imports = true
    extra-standard-library = ['typing_extensions']

[tool.ruff.lint.per-file-ignores]
    "**/__init__.py" = ['F403']
    "**/*.pyi" = ['F403', 'F405']
