[metadata]
name = sans
version = attr: sans.info.__version__
description = Synchronous / Asynchronous NationStates API wrapper for Python
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Zephyrkul
url = https://github.com/zephyrkul/sans
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find_namespace:
python_requires = >=3.6.0,<3.8
install_requires = 
    aiohttp>=3.4.4,<=3.5.4
    lxml==4.3.1

[options.extras_require]
docs = 
    sphinx==1.8.4

[options.entry_points]
console_scripts =
    sans=sans.__main__:main

[options.packages.find]
include =
    sans
    sans.*
